@@ -1,0 +1,32 @@
+/*
+ * Copyright (C) 2003-2015 FreeIPMI Core Team
+ *
+ * This program is free software: you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation, either version 3 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ *
+ */
+
+#ifndef IPMI_SLAVE_ADDRESS_OEM_INTEL_S2600BPB_SPEC_H
+#define IPMI_SLAVE_ADDRESS_OEM_INTEL_S2600BPB_SPEC_H
+
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+#include <freeipmi/spec/oem/intel/ipmi-slave-address-oem-intel-common-spec.h>
+
+#ifdef __cplusplus
+}
+#endif
+
+#endif /* IPMI_SLAVE_ADDRESS_OEM_INTEL_S2600BPB_SPEC_H */
